# SentinelVision-Pro-AI-Infused-Cyber-Physical-Threat-Detection-Visual-Intelligence-Platform

./: .gitignore  README.md  SentinelVisionPro.sln  docker-compose.yml  global.json
Backend/: Program.cs  SentinelVisionPro.Backend.csproj  appsettings.json
Backend/Controllers/: ThreatDetectionController.cs
Backend/Data/: ApplicationDbContext.cs
Backend/Models/: SystemEvent.cs  Threat.cs
Backend/Services/: ThreatDetectionService.cs
Frontend/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SentinelVisionPro.Frontend.csproj
Frontend/Converters/: BooleanToVisibilityConverter.cs  CountToVisibilityConverter.cs  SeverityToColorConverter.cs  StringToVisibilityConverter.cs
Frontend/ViewModels/: ThreatViewModel.cs
src/Core/: CMakeLists.txt
src/Core/SystemMonitor/include/: SystemMonitor.h
src/Core/VisionEngine/include/: VisionEngine.h
